--- a/.github/workflows/ru.yml
+++ b/.github/workflows/ru.yml
@@ -1,19 +1,15 @@
 name: Build RustDesk (Windows)
 
 on:
-  workflow_dispatch: {}  # 明确启用手动触发
+  workflow_dispatch: {}
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
 env:
-  VERSION: "1.3.9"
-  FLUTTER_VERSION: "3.24.5"
-  RUST_VERSION: "1.75.0"
-  VCPKG_COMMIT_ID: "6f29f12e82a8293156836ad81cc9bf5af41fe836"
-  VCPKG_DEFAULT_TRIPLET: "x64-windows-static"
-  VCPKG_FORCE_SYSTEM_BINARIES: "1"
+  PYTHON_VERSION: "3.9.13"  # 明确指定稳定版本
+  LLVM_VERSION: "15.0.6"
 
 jobs:
   build:
@@ -26,17 +22,40 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Install system dependencies
+    - name: Install system dependencies (Fixed)
       shell: powershell
       run: |
-        Set-ExecutionPolicy Bypass -Scope Process -Force
-        [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.SecurityProtocolType]::Tls12
-        iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
-        Import-Module "$env:ChocolateyInstall\helpers\chocolateyProfile.psm1" -Force
-        $env:PATH = [System.Environment]::GetEnvironmentVariable('PATH', 'Machine') + ';' + 
-                    [System.Environment]::GetEnvironmentVariable('PATH', 'User')
+        $ErrorActionPreference = "Stop"
         
-        choco install -y cmake git python llvm --version=15.0.6 nasm
+        # 1. 安装Chocolatey（带重试）
+        $maxRetries = 3
+        $retryCount = 0
+        while ($retryCount -lt $maxRetries) {
+            try {
+                Set-ExecutionPolicy Bypass -Scope Process -Force
+                [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.SecurityProtocolType]::Tls12
+                iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
+                break
+            } catch {
+                $retryCount++
+                if ($retryCount -eq $maxRetries) { throw }
+                Start-Sleep -Seconds (10 * $retryCount)
+            }
+        }
+
+        # 2. 更新环境变量
+        Import-Module "$env:ChocolateyInstall\helpers\chocolateyProfile.psm1" -Force
+        $env:PATH = "C:\ProgramData\chocolatey\bin;$env:PATH"
+
+        # 3. 安装基础工具（带版本锁定）
+        choco upgrade -y cmake git --no-progress
+        choco install -y python --version=$env:PYTHON_VERSION --no-progress
+        choco install -y llvm --version=$env:LLVM_VERSION --no-progress
+        choco install -y nasm --no-progress
+
+        # 4. 验证Python安装
+        python --version
+        if (-not $?) { throw "Python installation failed" }
 
     - name: Setup Rust
       uses: dtolnay/rust-toolchain@v1
@@ -44,49 +63,49 @@ jobs:
         toolchain: ${{ env.RUST_VERSION }}
         targets: x86_64-pc-windows-msvc
 
-    - name: Setup vcpkg (Fixed)
+    - name: Setup vcpkg
       shell: powershell
       run: |
         $vcpkgDir = "$env:GITHUB_WORKSPACE\vcpkg"
+        if (Test-Path $vcpkgDir) { Remove-Item -Recurse -Force $vcpkgDir }
         
-        # 清理旧目录
-        if (Test-Path $vcpkgDir) {
-            Remove-Item -Recurse -Force $vcpkgDir
-        }
-        
-        # 修复克隆方式
         git config --global core.longpaths true
         git clone https://github.com/microsoft/vcpkg $vcpkgDir
         cd $vcpkgDir
         git checkout $env:VCPKG_COMMIT_ID
         
-        # 验证并初始化
-        if (-not (Test-Path "$vcpkgDir\bootstrap-vcpkg.bat")) {
-            throw "vcpkg bootstrap files missing"
-        }
         & "$vcpkgDir\bootstrap-vcpkg.bat" -disableMetrics
         & "$vcpkgDir\vcpkg" integrate install
 
-    - name: Install vcpkg dependencies (Fixed)
+    - name: Install vcpkg dependencies
       shell: powershell
       run: |
-        $vcpkgDir = "$env:GITHUB_WORKSPACE\vcpkg"
-        $ErrorActionPreference = "Stop"
+        $vcpkgExe = "$env:GITHUB_WORKSPACE\vcpkg\vcpkg"
         
-        # 修复1：使用完整路径调用vcpkg
-        $vcpkgExe = "$vcpkgDir\vcpkg"
+        # 分步安装核心依赖
+        $packages = @(
+            "libvpx",
+            "libyuv",
+            "openssl",
+            "opus",
+            "ffmpeg[core,avcodec,avformat,swresample,swscale]",
+            "aom[core]"
+        )
         
-        # 修复2：正确的参数格式
-        & $vcpkgExe install libvpx --triplet=$env:VCPKG_DEFAULT_TRIPLET
-        & $vcpkgExe install libyuv --triplet=$env:VCPKG_DEFAULT_TRIPLET
-        & $vcpkgExe install openssl --triplet=$env:VCPKG_DEFAULT_TRIPLET
-        & $vcpkgExe install opus --triplet=$env:VCPKG_DEFAULT_TRIPLET
-        
-        # 修复3：分步安装复杂依赖
-        & $vcpkgExe install ffmpeg --triplet=$env:VCPKG_DEFAULT_TRIPLET `
-          --feature=core,avcodec,avformat,swresample,swscale
-        
-        & $vcpkgExe install aom --triplet=$env:VCPKG_DEFAULT_TRIPLET --feature=core
+        foreach ($pkg in $packages) {
+            $attempt = 1
+            while ($attempt -le 3) {
+                try {
+                    Write-Output "Installing $pkg (attempt $attempt)"
+                    & $vcpkgExe install $pkg --triplet=$env:VCPKG_DEFAULT_TRIPLET
+                    break
+                } catch {
+                    $attempt++
+                    if ($attempt -gt 3) { throw }
+                    Start-Sleep -Seconds (10 * $attempt)
+                }
+            }
+        }
 
     - name: Build RustDesk
       shell: powershell
@@ -97,6 +116,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: rustdesk-binaries
-        path: |
-          flutter\build\windows\x64\runner\Release\rustdesk.exe
-        retention-days: 7
+        path: flutter\build\windows\x64\runner\Release\rustdesk.exe
