--- a/.github/workflows/ru.yml
+++ b/.github/workflows/ru.yml
@@ -9,7 +9,8 @@ on:
 
 env:
   RUST_VERSION: "1.75.0"
-  FLUTTER_VERSION: "3.24.5"  # 明确指定Flutter版本
+  FLUTTER_VERSION: "3.24.5"
+  PYTHON_VERSION: "3.9.13"  # 使用长期支持版本
   VERSION: "1.3.9"
   BUILD_DIR: "target/release"
   FLUTTER_BUILD_DIR: "flutter/build/windows/x64/runner/Release"
@@ -25,7 +26,7 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Setup Flutter (Fixed)
+    - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
         channel: stable
@@ -43,25 +44,45 @@ jobs:
     - name: Install system dependencies (Fixed)
       shell: powershell
       run: |
-        # 修复Chocolatey安装
+        # 1. 设置执行策略和安全协议
         Set-ExecutionPolicy Bypass -Scope Process -Force
         [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.SecurityProtocolType]::Tls12
-        $chocoScript = Join-Path $env:TEMP 'choco-install.ps1'
-        Invoke-WebRequest -Uri 'https://community.chocolatey.org/install.ps1' -OutFile $chocoScript -UseBasicParsing
-        & $chocoScript
+
+        # 2. 安装Chocolatey（带重试）
+        $maxRetries = 3
+        $retryCount = 0
+        do {
+            try {
+                if (-not (Test-Path "$env:ProgramData\chocolatey\choco.exe")) {
+                    Write-Output "Installing Chocolatey (attempt $($retryCount+1))"
+                    iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
+                }
+                break
+            } catch {
+                $retryCount++
+                if ($retryCount -ge $maxRetries) { throw }
+                Start-Sleep -Seconds (10 * $retryCount)
+            }
+        } while ($true)
+
+        # 3. 更新环境变量
         Import-Module "$env:ChocolateyInstall\helpers\chocolateyProfile.psm1" -Force
-        $env:PATH = "$env:PATH;C:\Program Files\CMake\bin;C:\ProgramData\chocolatey\bin"
+        $env:PATH = "$env:PATH;C:\ProgramData\chocolatey\bin;C:\Program Files\CMake\bin"
 
-        # 安装必要工具
-        choco install -y cmake git python --version=3.9.13 llvm --version=15.0.6 nasm
-        refreshenv
+        # 4. 安装依赖（使用最新稳定版本）
+        choco install -y cmake git --no-progress
+        choco install -y python --version=$env:PYTHON_VERSION --no-progress
+        choco install -y llvm --version=15.0.6 --no-progress
+        
+        # 5. 手动安装NASM（不使用Chocolatey）
+        $ProgressPreference = 'SilentlyContinue'
+        Invoke-WebRequest -Uri "https://www.nasm.us/pub/nasm/releasebuilds/2.16.01/win64/nasm-2.16.01-win64.zip" -OutFile "nasm.zip"
+        Expand-Archive -Path "nasm.zip" -DestinationPath "C:\nasm"
+        $env:PATH = "C:\nasm;$env:PATH"
 
-    - name: Verify environments
-      shell: powershell
-      run: |
-        flutter --version
-        rustc --version
-        cargo --version
+        # 6. 验证安装
+        python --version
+        nasm --version
         cmake --version
 
     - name: Build Rust backend
@@ -85,7 +106,6 @@ jobs:
     - name: Merge builds
       shell: powershell
       run: |
-        # 复制Rust构建的可执行文件到Flutter构建目录
         Copy-Item "$env:BUILD_DIR/rustdesk.exe" -Destination "$env:FLUTTER_BUILD_DIR" -Force
 
     - name: Package artifacts
@@ -93,12 +113,8 @@ jobs:
       run: |
         $artifactDir = "release_$env:VERSION"
         New-Item -ItemType Directory -Path $artifactDir -Force
-        
-        # 复制所有必要文件
         Copy-Item "$env:FLUTTER_BUILD_DIR/rustdesk.exe" -Destination $artifactDir
         Copy-Item "$env:FLUTTER_BUILD_DIR/*.dll" -Destination $artifactDir
-        
-        # 创建ZIP包
         Compress-Archive -Path "$artifactDir/*" -DestinationPath "rustdesk-$env:VERSION.zip" -Force
 
     - name: Upload artifact
