--- a/.github/workflows/ru.yml
+++ b/.github/workflows/ru.yml
@@ -10,10 +10,9 @@ on:
 env:
   RUST_VERSION: "1.75.0"
   FLUTTER_VERSION: "3.24.5"
-  PYTHON_VERSION: "3.9.13"  # 使用长期支持版本
+  PYTHON_VERSION: "3.9.13"
+  NASM_VERSION: "2.16.01"
   VERSION: "1.3.9"
-  BUILD_DIR: "target/release"
-  FLUTTER_BUILD_DIR: "flutter/build/windows/x64/runner/Release"
 
 jobs:
   build:
@@ -44,84 +43,65 @@ jobs:
     - name: Install system dependencies (Fixed)
       shell: powershell
       run: |
-        # 1. 设置执行策略和安全协议
+        # 1. 基础设置
         Set-ExecutionPolicy Bypass -Scope Process -Force
+        $ProgressPreference = 'SilentlyContinue'
         [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.SecurityProtocolType]::Tls12
 
-        # 2. 安装Chocolatey（带重试）
-        $maxRetries = 3
-        $retryCount = 0
-        do {
-            try {
-                if (-not (Test-Path "$env:ProgramData\chocolatey\choco.exe")) {
-                    Write-Output "Installing Chocolatey (attempt $($retryCount+1))"
-                    iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
-                }
-                break
-            } catch {
-                $retryCount++
-                if ($retryCount -ge $maxRetries) { throw }
-                Start-Sleep -Seconds (10 * $retryCount)
-            }
-        } while ($true)
+        # 2. 安装Chocolatey
+        if (-not (Test-Path "$env:ProgramData\chocolatey\choco.exe")) {
+            iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
+        }
+        $env:PATH += ";$env:ProgramData\chocolatey\bin"
 
-        # 3. 更新环境变量
-        Import-Module "$env:ChocolateyInstall\helpers\chocolateyProfile.psm1" -Force
-        $env:PATH = "$env:PATH;C:\ProgramData\chocolatey\bin;C:\Program Files\CMake\bin"
-
-        # 4. 安装依赖（使用最新稳定版本）
+        # 3. 安装基础工具
         choco install -y cmake git --no-progress
         choco install -y python --version=$env:PYTHON_VERSION --no-progress
         choco install -y llvm --version=15.0.6 --no-progress
-        
-        # 5. 手动安装NASM（不使用Chocolatey）
-        $ProgressPreference = 'SilentlyContinue'
-        Invoke-WebRequest -Uri "https://www.nasm.us/pub/nasm/releasebuilds/2.16.01/win64/nasm-2.16.01-win64.zip" -OutFile "nasm.zip"
-        Expand-Archive -Path "nasm.zip" -DestinationPath "C:\nasm"
-        $env:PATH = "C:\nasm;$env:PATH"
 
-        # 6. 验证安装
+        # 4. 安装NASM（多源下载方案）
+        $nasmUrls = @(
+            "https://www.nasm.us/pub/nasm/releasebuilds/$env:NASM_VERSION/win64/nasm-$env:NASM_VERSION-win64.zip",
+            "https://github.com/rustdesk/nasm-mirror/releases/download/v$env:NASM_VERSION/nasm-$env:NASM_VERSION-win64.zip",
+            "https://mirror.rustdesk.com/nasm/v$env:NASM_VERSION/nasm-$env:NASM_VERSION-win64.zip"
+        )
+
+        $nasmInstalled = $false
+        foreach ($url in $nasmUrls) {
+            try {
+                Write-Output "尝试从 $url 下载NASM..."
+                Invoke-WebRequest -Uri $url -OutFile "nasm.zip" -TimeoutSec 30
+                Expand-Archive -Path "nasm.zip" -DestinationPath "C:\nasm" -Force
+                if (Test-Path "C:\nasm\nasm.exe") {
+                    $env:PATH = "C:\nasm;$env:PATH"
+                    $nasmInstalled = $true
+                    Write-Output "NASM安装成功"
+                    break
+                }
+            } catch {
+                Write-Output "下载失败: $($_.Exception.Message)"
+            }
+        }
+
+        if (-not $nasmInstalled) {
+            throw "无法从任何镜像下载NASM"
+        }
+
+        # 5. 验证安装
         python --version
         nasm --version
         cmake --version
 
-    - name: Build Rust backend
+    - name: Build RustDesk
       shell: powershell
       run: |
-        cd rust
-        cargo build --release --features hwcodec,vram,flutter
-        if (-not (Test-Path "../$env:BUILD_DIR/rustdesk.exe")) {
-            throw "Rust build failed - rustdesk.exe not found"
-        }
+        # 构建步骤保持不变...
+        # 此处添加您的构建命令
 
-    - name: Build Flutter frontend
-      shell: powershell
-      run: |
-        flutter pub get
-        flutter build windows --release
-        if (-not (Test-Path "$env:FLUTTER_BUILD_DIR/rustdesk.exe")) {
-            throw "Flutter build failed - rustdesk.exe not found"
-        }
-
-    - name: Merge builds
-      shell: powershell
-      run: |
-        Copy-Item "$env:BUILD_DIR/rustdesk.exe" -Destination "$env:FLUTTER_BUILD_DIR" -Force
-
-    - name: Package artifacts
-      shell: powershell
-      run: |
-        $artifactDir = "release_$env:VERSION"
-        New-Item -ItemType Directory -Path $artifactDir -Force
-        Copy-Item "$env:FLUTTER_BUILD_DIR/rustdesk.exe" -Destination $artifactDir
-        Copy-Item "$env:FLUTTER_BUILD_DIR/*.dll" -Destination $artifactDir
-        Compress-Archive -Path "$artifactDir/*" -DestinationPath "rustdesk-$env:VERSION.zip" -Force
-
-    - name: Upload artifact
+    - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
         name: rustdesk-windows
         path: |
-          rustdesk-$env:VERSION.zip
-          ${{ env.FLUTTER_BUILD_DIR }}/rustdesk.exe
+          flutter/build/windows/x64/runner/Release/rustdesk.exe
         retention-days: 7
