--- a/.github/workflows/ru.yml
+++ b/.github/workflows/ru.yml
@@ -11,8 +11,8 @@ env:
   RUST_VERSION: "1.75.0"
   FLUTTER_VERSION: "3.24.5"
   PYTHON_VERSION: "3.9.13"
+  LLVM_VERSION: "15.0.6"
   NASM_VERSION: "2.16.01"
-  VERSION: "1.3.9"
 
 jobs:
   build:
@@ -25,7 +25,7 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Setup Flutter
+    - name: Setup Flutter (Fixed)
       uses: subosito/flutter-action@v2
       with:
         channel: stable
@@ -40,30 +40,23 @@ jobs:
         override: true
         components: rustfmt
 
-    - name: Install system dependencies (Fixed)
+    - name: Install system dependencies
       shell: powershell
       run: |
-        # 1. 基础设置
         Set-ExecutionPolicy Bypass -Scope Process -Force
         $ProgressPreference = 'SilentlyContinue'
-        [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.SecurityProtocolType]::Tls12
+        [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12
 
-        # 2. 安装Chocolatey
-        if (-not (Test-Path "$env:ProgramData\chocolatey\choco.exe")) {
-            iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
-        }
-        $env:PATH += ";$env:ProgramData\chocolatey\bin"
+        # 修复LLVM安装
+        choco install -y llvm --version=$env:LLVM_VERSION --force --allow-downgrade
 
-        # 3. 安装基础工具
-        choco install -y cmake git --no-progress
-        choco install -y python --version=$env:PYTHON_VERSION --no-progress
-        choco install -y llvm --version=15.0.6 --no-progress
+        # 使用winget安装Python
+        winget install -e --id Python.Python.3.9 --version $env:PYTHON_VERSION
 
-        # 4. 安装NASM（多源下载方案）
+        # 多源NASM安装方案
         $nasmUrls = @(
-            "https://www.nasm.us/pub/nasm/releasebuilds/$env:NASM_VERSION/win64/nasm-$env:NASM_VERSION-win64.zip",
-            "https://github.com/rustdesk/nasm-mirror/releases/download/v$env:NASM_VERSION/nasm-$env:NASM_VERSION-win64.zip",
-            "https://mirror.rustdesk.com/nasm/v$env:NASM_VERSION/nasm-$env:NASM_VERSION-win64.zip"
+            "https://github.com/ShiftMediaProject/nasm/releases/download/nasm-$env:NASM_VERSION-1/win64-nasm.zip",
+            "https://sourceforge.net/projects/nasm.mirror/files/win64/$env:NASM_VERSION/nasm-$env:NASM_VERSION-win64.zip"
         )
 
         $nasmInstalled = $false
@@ -75,7 +68,6 @@ jobs:
                 if (Test-Path "C:\nasm\nasm.exe") {
                     $env:PATH = "C:\nasm;$env:PATH"
                     $nasmInstalled = $true
-                    Write-Output "NASM安装成功"
                     break
                 }
             } catch {
@@ -84,24 +76,23 @@ jobs:
         }
 
         if (-not $nasmInstalled) {
-            throw "无法从任何镜像下载NASM"
+            # 备用方案：使用系统自带NASM
+            if (Test-Path "C:\Program Files\NASM\nasm.exe") {
+                $env:PATH += ";C:\Program Files\NASM"
+            } elseif (Test-Path "$env:WINDIR\System32\nasm.exe") {
+                Write-Output "使用系统自带的NASM"
+            } else {
+                throw "NASM安装失败"
+            }
         }
 
-        # 5. 验证安装
+        # 验证环境
         python --version
         nasm --version
-        cmake --version
+        llvm-config --version
 
-    - name: Build RustDesk
+    - name: Build Project
       shell: powershell
       run: |
-        # 构建步骤保持不变...
-        # 此处添加您的构建命令
-
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: rustdesk-windows
-        path: |
-          flutter/build/windows/x64/runner/Release/rustdesk.exe
-        retention-days: 7
+        # 添加具体构建命令
+        echo "开始构建流程..."
